# entropy

./: CMakeLists.txt  clean.sh  entropy
include/: log.h  packet.h
src/: log.c  main.c  packet.c
